--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <body>
   <h1>Elemento</h1>
-  <img src="https://1.bp.blogspot.com/-euDCihpPPTI/Wykqj8fKCNI/AAAAAAAADzA/M_UIOUplCOAFTT853TgqahRQ5x8C-EqJwCLcBGAs/s1600/Inner%2Bplanes_edited-2.jpg" width="600px" />
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/8WydH5TtCfY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <ul>
     <li><a href="/elemento/level-1-elements.html">Level 1 Elements</a></li>
     <li><a href="/elemento/level-2-elements.html">Level 2 Elements</a></li>
+    <li><a href="/elemento/level-3-elements.html">Level 3 Elements</a></li>
   </ul>
+  <img src="https://1.bp.blogspot.com/-euDCihpPPTI/Wykqj8fKCNI/AAAAAAAADzA/M_UIOUplCOAFTT853TgqahRQ5x8C-EqJwCLcBGAs/s1600/Inner%2Bplanes_edited-2.jpg" width="600px" />
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/8WydH5TtCfY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
