--- a/level-1-elements/index.html
+++ b/level-1-elements/index.html
@@ -2,6 +2,9 @@
 <html>
 <body>
   <a href="/elemento">Home</a>
+  <ul>
+    <li><a href="/elemento/level-1-elements/water.html">Water</a></li>
+  </ul>
   <h1>Level 1 Elements</h1>
   <p>
     This is a paragraph
