--- a/level-1-elements/index.html
+++ b/level-1-elements/index.html
@@ -2,12 +2,10 @@
 <html>
 <body>
   <a href="/elemento">Home</a>
+  <h1>Level 1 Elements</h1>
+  <p>This is a paragraph</p>
   <ul>
     <li><a href="/elemento/level-1-elements/water.html">Water</a></li>
   </ul>
-  <h1>Level 1 Elements</h1>
-  <p>
-    This is a paragraph
-  </p>
 </body>
 </html>
