--- a/level-1-elements/index.html
+++ b/level-1-elements/index.html
@@ -6,6 +6,7 @@
   <p>This is a paragraph</p>
   <ul>
     <li><a href="/elemento/level-1-elements/water.html">Water</a></li>
+    <li><a href="/elemento/level-1-elements/fire.html">Fire</a></li>
   </ul>
 </body>
 </html>
