--- a/level-1-elements/index.html
+++ b/level-1-elements/index.html
@@ -7,6 +7,8 @@
   <ul>
     <li><a href="/elemento/level-1-elements/water.html">Water</a></li>
     <li><a href="/elemento/level-1-elements/fire.html">Fire</a></li>
+    <li><a href="/elemento/level-1-elements/air.html">Air</a></li>
+    <li><a href="/elemento/level-1-elements/earth.html">Earth</a></li>
   </ul>
 </body>
 </html>
