--- a/level-1-elements/water.html
+++ b/level-1-elements/water.html
@@ -3,8 +3,8 @@
 <body>
   <a href="/elemento">Home</a> / <a href="/elemento/level-1-elements/">Level 1 Elements</a>
   <h1>Water</h1>
-  <p>
-    This is a paragraph
-  </p>
+  <p>Damage: 1 / Elemental Master</p>
+  <p>Damage: 10 / Opponent</p>
+  <p>Damage: 0 / Self</p>
 </body>
 </html>
