--- a/level-1-elements/water.html
+++ b/level-1-elements/water.html
@@ -3,8 +3,56 @@
 <body>
   <a href="/elemento">Home</a> / <a href="/elemento/level-1-elements/">Level 1 Elements</a>
   <h1>Water</h1>
-  <p>Damage: 1 / Elemental Master</p>
-  <p>Damage: 10 / Opponent</p>
-  <p>Damage: 0 / Self</p>
+  <h2>Damage</h2>
+  <table>
+    <tr>
+      <th>Type</th>
+      <th>Damage Points</th>
+    </tr>
+    <tr>
+      <td>Elemental Master</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td>Opponent</td>
+      <td>10</td>
+    </tr>
+    <tr>
+      <td>Self</td>
+      <td>0</td>
+    </tr>
+  </table>
+
+  <h2>Attack Moves</h2>
+  <table>
+    <tr>
+      <th>Type</th>
+      <th>Damage Points</th>
+    </tr>
+    <tr>
+      <td>Water Ball</td>
+      <td>2.3</td>
+    </tr>
+    <tr>
+      <td>Reverse Stream</td>
+      <td>AN-20</td>
+    </tr>
+  </table>
+
+  <h2>Special Functions</h2>
+  <table>
+    <tr>
+      <th>Type</th>
+      <th>AN Points</th>
+    </tr>
+    <tr>
+      <td>Spinjitzu</td>
+      <td>AND-30</td>
+    </tr>
+    <tr>
+      <td>Airjitzu</td>
+      <td>ANH-10</td>
+    </tr>
+  </table>
 </body>
 </html>
