--- a/level-1-elements/fire.html
+++ b/level-1-elements/fire.html
@@ -3,8 +3,56 @@
 <body>
   <a href="/elemento">Home</a> / <a href="/elemento/level-1-elements/">Level 1 Elements</a>
   <h1>Fire</h1>
-  <p>
-    This is a paragraph
-  </p>
+  <h2>Damage</h2>
+  <table>
+    <tr>
+      <th>Type</th>
+      <th>Damage Points</th>
+    </tr>
+    <tr>
+      <td>Elemental Master</td>
+      <td>4</td>
+    </tr>
+    <tr>
+      <td>Opponent</td>
+      <td>6</td>
+    </tr>
+    <tr>
+      <td>Self</td>
+      <td>2</td>
+    </tr>
+  </table>
+
+  <h2>Attack Moves</h2>
+  <table>
+    <tr>
+      <th>Type</th>
+      <th>Damage Points</th>
+    </tr>
+    <tr>
+      <td>Fireball</td>
+      <td>5</td>
+    </tr>
+    <tr>
+      <td>Stovemelt</td>
+      <td>9-ANH</td>
+    </tr>
+  </table>
+
+  <h2>Special Functions</h2>
+  <table>
+    <tr>
+      <th>Type</th>
+      <th>AN Points</th>
+    </tr>
+    <tr>
+      <td>Spinjitzu</td>
+      <td>5.4-ANH</td>
+    </tr>
+    <tr>
+      <td>Airjitzu</td>
+      <td>2-AND</td>
+    </tr>
+  </table>
 </body>
 </html>
