added cinder storm

--- a/level-1-elements/fire.html
+++ b/level-1-elements/fire.html
@@ -53,6 +53,10 @@
       <td>Airjitzu</td>
       <td>2-AND</td>
     </tr>
+    <tr>
+      <td>Cinder Storm</td>
+      <td>9</td>
+    </tr>
   </table>
 </body>
 </html>
