--- a/level-2-elements/index.html
+++ b/level-2-elements/index.html
@@ -6,6 +6,8 @@
   <p>This is a paragraph</p>
   <ul>
     <li><a href="/elemento/level-2-elements/sound.html">Sound</a></li>
+    <li><a href="/elemento/level-2-elements/lighning.html">Lightning</a></li>
+    <li><a href="/elemento/level-2-elements/thunder.html">Thunder</a></li>
   </ul>
 </body>
 </html>
