--- a/level-2-elements/lightning.html
+++ b/level-2-elements/lightning.html
@@ -2,7 +2,7 @@
 <html>
 <body>
   <a href="/elemento">Home</a> / <a href="/elemento/level-2-elements/">Level 2 Elements</a>
-  <h1>Sound</h1>
+  <h1>Lightning</h1>
   <p>
     This is a paragraph
   </p>
