--- a/level-2-elements/index.html
+++ b/level-2-elements/index.html
@@ -8,6 +8,7 @@
     <li><a href="/elemento/level-2-elements/sound.html">Sound</a></li>
     <li><a href="/elemento/level-2-elements/lightning.html">Lightning</a></li>
     <li><a href="/elemento/level-2-elements/thunder.html">Thunder</a></li>
+    <li><a href="/elemento/level-2-elements/metal.html">Metal</a></li>
   </ul>
 </body>
 </html>
