--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <ul>
     <li><a href="/elemento/level-1-elements/">Level 1 Elements</a></li>
     <li><a href="/elemento/level-2-elements/">Level 2 Elements</a></li>
-    <li><a href="/elemento/level-3-elements.html">Level 3 Elements</a></li>
+    <li><a href="/elemento/level-3-elements/">Level 3 Elements</a></li>
     <li><a href="/elemento/level-4-elements.html">Level 4 Elements</a></li>
     <li><a href="/elemento/planes-of-existence.html">Planes of Existence</a></li>
   </ul>
