Add description to video

--- a/planes-of-existence.html
+++ b/planes-of-existence.html
@@ -3,9 +3,9 @@
 <body>
   <a href="/elemento">Home</a>
   <h1>Planes of Existence</h1>
-  <p>
-    This is a paragraph
-  </p>
   <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/djfIrDLpF8U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <p>
+    ^ watch this video to learn about the multiverse and the far realm.
+  </p>
 </body>
 </html>
