--- a/across-the-multiverse-video-game.html
+++ b/across-the-multiverse-video-game.html
@@ -3,6 +3,6 @@
 <body>
   <a href="/elemento">Home</a>
   <h1>Across The Multiverse - Video Game</h1>
-  <p>Placeholder - game goes here</p>
+  <img src="assets/runeclaw.jpeg">
 </body>
 </html>
